wrap rows in containers to avoid overflow-x

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -102,6 +102,7 @@ a {
 }
 
 .section-text {
+	width: 100%;
 	padding: 0 2%;
 	min-height: 50vh;
 }
